# concurrency

Game1/: CGameBoard.cpp  CGameBoard.h  CMakeLists.txt  CTorus.h  input.txt  input_rand.txt  main.cpp
Game1/.ipynb_checkpoints/: plot-checkpoint.ipynb
GameLife/: CGameBoard.cpp  CGameBoard.h  CLivingCell.cpp  CLivingCell.h  CMakeLists.txt  CTorus.cpp  CTorus.h  CyclicBarrier.cpp  CyclicBarrier.h  main.cpp
MPI/: CGameBoard.cpp  CGameBoard.h  CMakeLists.txt  CTorus.cpp  CTorus.h  a.out  input.txt  main.cpp
MPI/.ipynb_checkpoints/: time-checkpoint.ipynb
MPIdebil/: CMakeLists.txt  main.cpp
OpenMP/: CMakeLists.txt
Open_MP/: CMakeLists.txt
openmp/: CGameBoard.cpp  CMakeLists.txt  CTorus.cpp  input.txt  input_rand.txt  main.cpp
openmp/.ipynb_checkpoints/: my_time-checkpoint.ipynb
